# mcl

./: .gitignore  .travis.yml  CMakeLists.txt  COPYRIGHT  Makefile  Makefile.cross  Makefile.wasm  api.md  bench.txt  build.sh  cmake_install.cmake  common.mk  common.props  debug.props  go.mod  internal.md  makefile.win  mcl.sln  mclTargets.cmake  mk.bat  mk_arm64.bat  mklib.bat  mklib_arm64.bat  readme.md  release.props  result.txt  setvar.bat  setvar_arm64.bat
.github/: CONTRIBUTING.md
.github/workflows/: arm64-windows.yml  main.yml
android/jni/: Android.mk  Application.mk
cmake/: FindVisualStudio.cmake  WinArm64Tools.cmake  arm64-windows-toolchain.cmake
docs/: index.html
docs/demo/: exported-mcl.js  exported-she.js  exported-she.json  ibe-demo.js  ibe.html  index.html  index.js  mcl.js  mcl_c.js  mcl_c.wasm  mclbn.js  mclbn.wasm  mclshe.js  mclshe.wasm  mobile.css  pairing.html  pairing.js  she-demo.js  she-demo2.js  she-ja.html  she.html  she.js  she2.html  she_c.js  she_c.wasm  style.css
ffi/: readme.md
ffi/cs/: App.config  Program.cs  bn256.cs  bn256.csproj  bn256_test.cs  mcl.sln  pairing.csproj  pairing.sln  readme.md
ffi/cs/Properties/: AssemblyInfo.cs
ffi/cs/bn256std/: bn256.cs  bn256_test.cs  bn256std.csproj
ffi/cs/mcl/: mcl.cs  mcl.csproj  mclcs.csproj
ffi/cs/test/: test.cs  test.csproj
ffi/go/mcl/: init.go  link.go  mcl.go  mcl_test.go
ffi/java/: CMakeLists.txt  Makefile  MclTest.java  README.md  bn256_impl.hpp  bn256_wrap.cxx  elgamal_impl.hpp  elgamal_wrap.cxx  java.md  make_wrap.bat  mcl.i  mcl_impl.hpp  mcl_wrap.cxx  readme.md  run-mcl.bat
ffi/java/android/jni/: Android.mk
ffi/java/android/project/: build.gradle  settings.gradle
ffi/java/android/project/gradle/wrapper/: gradle-wrapper.properties
ffi/java/android/project/mcl-android/: build.gradle
ffi/java/android/project/mcl-android/src/main/: AndroidManifest.xml
ffi/java/com/herumi/mcl/: Bn256.java  Bn256JNI.java  CipherText.java  Elgamal.java  ElgamalJNI.java  Fp.java  Fr.java  G1.java  G2.java  GT.java  Mcl.java  MclConstants.java  MclJNI.java  PrivateKey.java  PublicKey.java  SWIGTYPE_p_bool.java
ffi/js/: export-functions.py  exported-mcl.txt  pre.js  she-re.txt
ffi/python/: Makefile  pairing.py  readme.md  she.py
ffi/rust/: Cargo.toml  README.md  build.rs
ffi/rust/examples/: pairing.rs
ffi/rust/mcl/: Cargo.toml
ffi/rust/mcl/examples/: pairing.rs
ffi/rust/mcl/src/: lib.rs
ffi/rust/src/: bn254.rs  ffi.rs  lib.rs
ffi/rust/tests/: bn254_test.rs
include/cybozu/: atoi.hpp  atomic.hpp  benchmark.hpp  bit_operation.hpp  crypto.hpp  endian.hpp  exception.hpp  file.hpp  hash.hpp  inttype.hpp  itoa.hpp  link_libeay32.hpp  link_mpir.hpp  link_ssleay32.hpp  mutex.hpp  option.hpp  random_generator.hpp  serializer.hpp  sha2.hpp  socket.hpp  stream.hpp  xorshift.hpp
include/mcl/: aggregate_sig.hpp  ahe.hpp  array.hpp  array_iterator.hpp  bgn.hpp  bint.hpp  bint_proto.hpp  bitint.hpp  bitint_if.hpp  bls12.hpp  bls12_381.hpp  bn.h  bn.hpp  bn256.h  bn256.hpp  bn256_if.h  bn384.hpp  bn512.hpp  bn_c256.h  bn_c384.h  bn_c384_256.h  bn_common.hpp  bn_if.h  config.hpp  conversion.hpp  curve_type.h  curve_type.hpp  ec.hpp  ecdsa.h  ecdsa.hpp  ecparam.hpp  elgamal.hpp  emu_mpz.hpp  fp.hpp  fp2.hpp  fp_base.hpp  fp_def.hpp  fp_ext.hpp  fp_generator.hpp  fp_proto.hpp  (+30 more)
include/mcl/impl/: bn_c_impl.hpp
include/mcl/tinylib/: assert.h  memory.h  stdlib.h  string.h
java/: Bn256Test.java  ElgamalTest.java  Makefile  MclElgamalTest.java  MclTest.java  bn256.i  bn256_impl.hpp  bn256_wrap.cxx  elgamal.hpp  elgamal.i  elgamal_impl.hpp  java.md  make_wrap.bat  mcl_elgamal.i  mcl_if.hpp  mcl_if.i  run-bn256.bat  run-elgamal.bat  run-mcl.bat  run-mcl_elgamal.bat
misc/: Makefile  divsmallx-diff.py  gather_test.cpp  gen_test.cpp  gen_test.py  internal.md  karatsuba.cpp  low_test.cpp  memo.md  mul-approx.py  mul.cpp  mulvec_test.cpp  new-div.py  precompute.cpp  snark-p.py  split.py  test.cpp
misc/she/: Makefile  bench.cpp  bench.sh  bench4.txt  bench6.txt  bench8.txt  memo.txt  she-api-ja.md  she-api.md
sample/: CMakeLists.txt  Makefile  bench.cpp  bgn_smpl.cpp  bls_sig.cpp  ecdh.cpp  ecdh_smpl.cpp  eip-196.cpp  large.cpp  mt_test.cpp  multi-sig.cpp  multi.cpp  niat.cpp  pairing.cpp  pairing_c.c  pairing_if.c  random.cpp  random_smpl.cpp  rawbench.cpp  she_g1only.cpp  she_make_dlp_table.cpp  she_smpl.cpp  sps_eq.cpp  tri-dh.cpp  vote.cpp
src/: Makefile  all.txt  avx512.hpp  base32.ll  base64.ll  bint32.ll  bint64.ll  bint_impl.hpp  bint_switch.hpp  bitint.hpp  bitint_if.cpp  bitint_if.hpp  bn256.cpp  bn256_if.cpp  bn_c.cpp  bn_c256.cpp  bn_c384.cpp  bn_c384_256.cpp  bn_c512.cpp  bn_c_impl.hpp  bn_if.cpp  cast.hpp  compress.hpp  conversion.hpp  conversion_impl.hpp  detect_cpu.hpp  dump_code.cpp  ecdsa_c.cpp  fp.cpp  fp_generator.hpp  fp_llvm.hpp  fp_proto.hpp  fp_static_code.hpp  fp_tower_impl.hpp  gen.cpp  gen.py  gen_bint.cpp  gen_bint_header.py  gen_bint_x64.py  gen_bitint.cpp  (+32 more)
src/asm/: aarch64.s  arm.s  bint-x64-amd64.S  bint-x64-amd64.s  bint-x64-mingw.S  bint-x64-win.asm  bint64-Linux-aarch64.s  low_arm.s  low_x86-64.asm  x86-64.S  x86-64.bmi2.s  x86-64.s  x86-64mac.bmi2.s  x86-64mac.s  x86.bmi2.s  x86.s
src/proj/: mcl.vcxproj
src/proj/mcllib/: mcllib.vcxproj
src/wasm/: errno.h  glue.js  libc.c  memory.h  stack.s  stack_c.c  stdlib.h  string.h
src/xbyak/: xbyak.h
test/: CMakeLists.txt  Makefile  aggregate_sig_test.cpp  array_test.cpp  base_test.cpp  bench.hpp  bgn_test.cpp  bint_test.cpp  bitint_if_test.cpp  bitint_test.cpp  bls12_test.cpp  bn256_if_test.cpp  bn256_test.cpp  bn384_test.cpp  bn512_test.cpp  bn_c256_test.cpp  bn_c384_256_test.cpp  bn_c384_test.cpp  bn_c_test.hpp  bn_if256_test.cpp  bn_if384_test.cpp  bn_if_test.hpp  bn_test.cpp  common_test.hpp  conversion_test.cpp  ec_test.cpp  ecdsa_c_test.cpp  ecdsa_test.cpp  elgamal_test.cpp  emu_mpz_test.cpp  fp_ext_test.cpp  fp_generator_test.cpp  fp_test.cpp  fp_tower_test.cpp  fp_util_test.cpp  glv_test.cpp  gmp_test.cpp  invmod_test.cpp  llvm_test.cpp  low_armv7.s  (+23 more)
test/proj/bls12_test/: bls12_test.vcxproj
(+13 files in other folders)
